--- a/generales.html
+++ b/generales.html
@@ -359,6 +359,26 @@
                 <div class="recuadro resumen-votos">
                     <h3>Resumen de votos</h3>
                     <div>
+                        <div class="chart-wrap horizontal">
+                            <div class="grid">
+                                <div class="bar" style="--bar-value:85%;" data-name="Partido 1" title="Your Blog
+                            85%"></div>
+                                <div class="bar" style="--bar-value:23%;" data-name="Partido 2" title="Medium
+                            23%"></div>
+                                <div class="bar" style="--bar-value:7%;" data-name="Partido 3" title="Tumblr
+                            7%"></div>
+                                <div class="bar" style="--bar-value:38%;" data-name="Partido 4" title="Facebook
+                            38%"></div>
+                                <div class="bar" style="--bar-value:35%;" data-name="Partido 5" title="YouTube
+                            35%"></div>
+                                <div class="bar" style="--bar-value:30%;" data-name="Partido 6" title="LinkedIn
+                            30%"></div>
+                                <div class="bar" style="--bar-value:5%;" data-name="Partido 7" title="Twitter
+                            5%"></div>
+                                <div class="bar" style="--bar-value:20%;" data-name="Otros" title="Other
+                            20%"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -380,4 +400,5 @@
         </p>
     </footer>
 </body>
+
 </html>
