elaboracion de iformes.html e informes.css

--- a/generales.html
+++ b/generales.html
@@ -41,7 +41,7 @@
                             <img src="https://img.icons8.com/?size=1x&id=132&format=png" height="15" alt="" srcset="">
                             Filtrar</button></a>
                 </li>
-                <li class="nav-generales"><a class="active" href="./generales.html">GENERALES</a></li>
+                <li class="nav-paso"><a class="active" href="./paso.html">PASO</a></li>
                 <li class="informes"><a class="active" href="./informes.html">INFORMES</a></li>
                 <li class="inicio"><a class="active" href="./index.html">INICIO</a></li>
             </ul>
