Comienzo de la fase 3

--- a/generales.html
+++ b/generales.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/pages/paso-generales.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="js/pages/paso-general.js" defer></script>
 </head>
 
 <body>
@@ -22,18 +23,24 @@
         <div class="header-menu">
             <ul>
                 <li>
-                    <select name="año" class="desplegable">
+                    <select name="año" class="desplegable" id="select-anio" onchange="comboCargo()">
                         <option value="0">Año</option>
                     </select>
                 </li>
                 <li>
-                    <select name="cargo" class="desplegable">
+                    <select name="cargo" id="select-cargo" class="desplegable" onchange="comboDistrito()">
                         <option value="0">Cargo</option>
                     </select>
                 </li>
                 <li>
-                    <select name="distrito" class="desplegable">
+                    <select name="distrito" id="select-distrito" class="desplegable" onchange="comboSeccion()">
                         <option value="0">Distrito</option>
+                    </select>
+                    <input type="hidden" id="hdSeccionProvincial" name="hdSeccionProvincial">
+                </li>
+                <li>
+                    <select name="secciones" id="select-seccion" class="desplegable">
+                        <option value="0">Seccion</option>
                     </select>
                 </li>
                 <li>
