--- a/generales.html
+++ b/generales.html
@@ -36,15 +36,15 @@
                     <select name="distrito" id="select-distrito" class="desplegable" onchange="comboSeccion()">
                         <option value="0">Distrito</option>
                     </select>
-                    <input type="hidden" id="hdSeccionProvincial" name="hdSeccionProvincial">
                 </li>
+                <input type="hidden" id="hdSeccionProvincial" name="hdSeccionProvincial">
                 <li>
                     <select name="secciones" id="select-seccion" class="desplegable">
                         <option value="0">Seccion</option>
                     </select>
                 </li>
                 <li>
-                    <a class="active" href="#"><button id="boton-filtrar">
+                    <a class="active" href="#" onclick="consultarResultados()"><button id="boton-filtrar">
                             <img src="https://img.icons8.com/?size=1x&id=132&format=png" height="15" alt="" srcset="">
                             Filtrar</button></a>
                 </li>
