--- a/generales.html
+++ b/generales.html
@@ -351,15 +351,9 @@
                     </div>
                 </div>
                 <div class="recuadro provincias">
-                    <h3>Buenos Aires</h3>
-                    <div class="provincia">
-                        <svg height="210" width="800">
-                            <path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" fill="#18a0fb" fill-opacity="1"
-                                fill-rule="evenodd"
-                                d="M171 55L163 53L150 45L147 50L143 49L133 60L114 60L114 151L116 151L120 155L122 156L126 153L128 149L124 145L126 143L126 138L128 138L129 133L126 129L126 122L134 126L139 126L169 119L179 114L189 97L190 89L189 87L186 87L182 82L185 75L181 69L171 63L170 64L170 58z">
-                            </path>
-                        </svg>
+                    <h3 id="tit-rec-prov"></h3>
+                    <div class="provincia" id="provincia">
+
                     </div>
                 </div>
                 <div class="recuadro resumen-votos">
