--- a/generales.html
+++ b/generales.html
@@ -13,7 +13,7 @@
     <script src="js/pages/paso-general.js" defer></script>
 </head>
 
-<body>
+<body onload="mostrarMensajeAmarillo('Debe seleccionar los valores a filtrar y hacer clic en el botón FILTRAR')">
     <header>
         <!--Barra de logo portal-->
         <div class="header-page">
@@ -57,18 +57,18 @@
     <!-- Contenido principal de la página -->
     <main>
         <section id="sec-messages">
-            <div class="yellow message" id="mensaje">
+            <div class="yellow message">
                 <i class="fa-solid fa-exclamation"></i>
-                <p id="p-message"></p>
+                <p>Se agrego con éxito el resultado del informe</p>
             </div>
-            <!-- <div class="green message">
+            <div class="green message">
                 <i class="fa-solid fa-thumbs-up"></i>
                 <p>Se agregó con éxito el resultado al informe</p>
             </div>
             <div class="red message">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 <p>Error.Se produjo un error al intentar agregar resultados al informe</p>
-            </div> -->
+            </div>
         </section>
         <section id="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
