--- a/generales.html
+++ b/generales.html
@@ -282,72 +282,6 @@
                 <div class="recuadro agrupaciones">
                     <h3>Agrupaciones políticas</h3>
                     <div class="barras">
-                        <div class="progress-container">
-                            <div class="progress-titulo">
-                                <h4>FRENTE DE TODOS</h4>
-                                <p>20%<br>12000 votos</p>
-                            </div>
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--graficaamarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-titulo">
-                                <h4>FRENTE DE TODOS</h4>
-                                <p>20%<br>12000 votos</p>
-                            </div>
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--graficaamarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-titulo">
-                                <h4>FRENTE DE TODOS</h4>
-                                <p>20%<br>12000 votos</p>
-                            </div>
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--graficaamarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-titulo">
-                                <h4>FRENTE DE TODOS</h4>
-                                <p>20%<br>12000 votos</p>
-                            </div>
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--graficaamarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-titulo">
-                                <h4>FRENTE DE TODOS</h4>
-                                <p>20%<br>12000 votos</p>
-                            </div>
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--graficaamarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-titulo">
-                                <h4>FRENTE DE TODOS</h4>
-                                <p>20%<br>12000 votos</p>
-                            </div>
-                            <div class="progress" style="background: var(--grafica-amarillo-claro);">
-                                <div class="progress-bar" style="width:15%; background: var(--graficaamarillo);">
-                                    <span class="progress-bar-text">15%</span>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="recuadro provincias">
@@ -359,7 +293,7 @@
                 <div class="recuadro resumen-votos">
                     <h3>Resumen de votos</h3>
                     <div>
-                        <div class="chart-wrap horizontal">
+                        <div class="chart-wrap horizontal" id="chart-wrap horizontal">
                             <div class="grid">
                                 <div class="bar" style="--bar-value:85%;" data-name="Partido 1" title="Your Blog
                             85%"></div>
