Fix agrupaciones politicas

--- a/generales.html
+++ b/generales.html
@@ -281,7 +281,7 @@
             <div class="container-recuadro">
                 <div class="recuadro agrupaciones">
                     <h3>Agrupaciones políticas</h3>
-                    <div class="barras">
+                    <div class="barras" id="barras">
                     </div>
                 </div>
                 <div class="recuadro provincias">
