--- a/paso.html
+++ b/paso.html
@@ -282,6 +282,9 @@
                 <div class="recuadro agrupaciones">
                     <h3>Agrupaciones políticas</h3>
                     <div class="barras" id="barras">
+                        <div class="progress-container" id="progress-container">
+                            
+                        </div>
                     </div>
                 </div>
                 <div class="recuadro provincias">
