--- a/informes.html
+++ b/informes.html
@@ -59,8 +59,8 @@
                         <th>Datos Generales</th>
                         <th>Datos por Agrupación</th>
                     </tr>
-                    <!-- <tr class="tabla-body" id="tabla-body"> -->
-                        <!-- <td class="provincia">
+                     <!-- <tr class="tabla-body" id="tabla-body"> 
+                         <td class="provincia">
                             <div class="flex-td">
                                 <svg height="210" width="800">
                                     <path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1"
@@ -294,8 +294,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </td> -->
-                    <!-- </tr> -->
+                        </td> 
+                     </tr>  -->
                 </table>
             </div>
         </section>
