--- a/paso.html
+++ b/paso.html
@@ -78,7 +78,9 @@
         <section id="sec-contenido">
             <div class="bottons-container">
                 <ul>
-                    <li class="agregar-informe">+ AGREGAR INFORME</li>
+                    <li class="agregar-informe">
+                        <a href="#"><button onclick="agregarInforme();">+ AGREGAR INFORME</button></a>
+                    </li>
                     <li class="botton-urna"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="841.889px"
                             height="595.281px" viewBox="0 0 841.889 595.281" enable-background="new 0 0 841.889 595.281"
@@ -297,23 +299,7 @@
                     <h3>Resumen de votos</h3>
                     <div>
                         <div class="chart-wrap horizontal" id="chart-wrap horizontal">
-                            <div class="grid">
-                                <div class="bar" style="--bar-value:85%;" data-name="Partido 1" title="Your Blog
-                            85%"></div>
-                                <div class="bar" style="--bar-value:23%;" data-name="Partido 2" title="Medium
-                            23%"></div>
-                                <div class="bar" style="--bar-value:7%;" data-name="Partido 3" title="Tumblr
-                            7%"></div>
-                                <div class="bar" style="--bar-value:38%;" data-name="Partido 4" title="Facebook
-                            38%"></div>
-                                <div class="bar" style="--bar-value:35%;" data-name="Partido 5" title="YouTube
-                            35%"></div>
-                                <div class="bar" style="--bar-value:30%;" data-name="Partido 6" title="LinkedIn
-                            30%"></div>
-                                <div class="bar" style="--bar-value:5%;" data-name="Partido 7" title="Twitter
-                            5%"></div>
-                                <div class="bar" style="--bar-value:20%;" data-name="Otros" title="Other
-                            20%"></div>
+                            
                             </div>
                         </div>
                     </div>
