--- a/paso.html
+++ b/paso.html
@@ -298,9 +298,8 @@
                 <div class="recuadro resumen-votos">
                     <h3>Resumen de votos</h3>
                     <div>
-                        <div class="chart-wrap horizontal" id="chart-wrap horizontal">
-                            
-                            </div>
+                        <div class="chart-wrap horizontal">
+                            <div class="grid" id="grid"></div>
                         </div>
                     </div>
                 </div>
