--- a/informes.html
+++ b/informes.html
@@ -302,17 +302,19 @@
     </main>
     <!--Pie de página-->
     <footer>
-        <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" alt="">
-        <img src="img/icons/Logo_DINE_negativo.a88f983e.png" alt="">
-        <img src="img/icons/logos_001-10.4430c8d5.png" alt="">
-        <p>
-            Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945). Los
-            porcentajes de las agrupaciones políticas son calculados sobre los votos válidos (PASO) conforme al art.
-            45
-            Ley 26.571 y afirmativos (Generales). No se incluyen los votos correspondientes a los electores
-            residentes en el exterior ni privados de la libertad. Al usar este sitio usted acepta los
-            <a href="about:blank">Términos y condiciones.</a>
-        </p>
+        <div class="content-footer">
+            <img src="img/icons/Ministerio-del-Interior_pluma.1ab9a7a7.png" alt="">
+            <img src="img/icons/Logo_DINE_negativo.a88f983e.png" alt="">
+            <img src="img/icons/logos_001-10.4430c8d5.png" alt="">
+            <p>
+                Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945). Los
+                porcentajes de las agrupaciones políticas son calculados sobre los votos válidos (PASO) conforme al art.
+                45
+                Ley 26.571 y afirmativos (Generales). No se incluyen los votos correspondientes a los electores
+                residentes en el exterior ni privados de la libertad. Al usar este sitio usted acepta los
+                <a href="about:blank">Términos y condiciones.</a>
+            </p>
+        </div>
     </footer>
 </body>
 
