--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section id="sec-contenido">
             <div>
-                <h3>Elecciones 2021</h3>
+                <h3>Sistema de Publicación de Resultados Electorales</h3>
                 <p>Seleccione el tipo de elección que quiere consultar.</p>
             </div>
             <div class="buttons-principales">
