--- a/informes.html
+++ b/informes.html
@@ -51,7 +51,7 @@
             </div>
         </section>
         <section id="sec-contenido">
-            <div class="container-grilla-informes">
+            <div class="container-grilla-informes" id="container-grilla-informes">
                 <table class="tabla-informes" id="tabla-informes">
                     <tr>
                         <th>Provincia</th>
