--- a/informes.html
+++ b/informes.html
@@ -6,8 +6,8 @@
     <title>Sistema de Publicación de Resultados Electorales</title>
     <link rel="shortcut icon" type="image/png" href="./img/icons/favicon-16x16.png">
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/pages/informes.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="js/pages/informes.js" defer></script>
@@ -60,7 +60,7 @@
                         <th>Datos por Agrupación</th>
                     </tr>
                     <!-- <tr class="tabla-body" id="tabla-body"> -->
-                        <!-- <td class="provincia">
+                    <!-- <td class="provincia">
                             <div class="flex-td">
                                 <svg height="210" width="800">
                                     <path class="leaflet-interactive" stroke="#18a0fb" stroke-opacity="1"
