--- a/generales.html
+++ b/generales.html
@@ -6,7 +6,7 @@
     <title>Sistema de Publicación de Resultados Electorales</title>
     <link rel="shortcut icon" type="image/png" href="./img/icons/favicon-16x16.png">
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/pages/paso-generales.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
