--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sistema de Publicación de Resultados Electorales</title>
     <link rel="shortcut icon" type="image/png" href="./img/icons/favicon-16x16.png">
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/5.15.4/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -115,4 +115,5 @@
         </div>
     </footer>
 </body>
+
 </html>
