--- a/generales.html
+++ b/generales.html
@@ -13,7 +13,7 @@
     <script src="js/pages/paso-general.js" defer></script>
 </head>
 
-<body onload="mostrarMensajeAmarillo('Debe seleccionar los valores a filtrar y hacer clic en el botón FILTRAR')">
+<body onload="mostrarMensajeAmarillo('Debe seleccionar los valores a filtrar y hacer clic en el botón FILTRAR');">
     <header>
         <!--Barra de logo portal-->
         <div class="header-page">
@@ -23,17 +23,17 @@
         <div class="header-menu">
             <ul>
                 <li>
-                    <select name="año" class="desplegable" id="select-anio" onchange="comboCargo()">
+                    <select name="año" class="desplegable" id="select-anio" onchange="comboCargo();">
                         <option value="0">Año</option>
                     </select>
                 </li>
                 <li>
-                    <select name="cargo" id="select-cargo" class="desplegable" onchange="comboDistrito()">
+                    <select name="cargo" id="select-cargo" class="desplegable" onchange="comboDistrito();">
                         <option value="0">Cargo</option>
                     </select>
                 </li>
                 <li>
-                    <select name="distrito" id="select-distrito" class="desplegable" onchange="comboSeccion()">
+                    <select name="distrito" id="select-distrito" class="desplegable" onchange="comboSeccion();">
                         <option value="0">Distrito</option>
                     </select>
                 </li>
@@ -44,7 +44,7 @@
                     </select>
                 </li>
                 <li>
-                    <a class="active" href="#" onclick="consultarResultados()"><button id="boton-filtrar">
+                    <a class="active" href="#" onclick="consultarResultados();"><button id="boton-filtrar">
                             <img src="https://img.icons8.com/?size=1x&id=132&format=png" height="15" alt="" srcset="">
                             Filtrar</button></a>
                 </li>
