--- a/generales.html
+++ b/generales.html
@@ -295,7 +295,7 @@
                 </div>
                 <div class="recuadro resumen-votos">
                     <h3>Resumen de votos</h3>
-                    <div>
+                    <div class="container-grafico">
                         <div class="chart-wrap horizontal">
                             <div class="grid" id="grid">
                             </div>
