--- a/generales.html
+++ b/generales.html
@@ -56,6 +56,7 @@
     </header>
     <!-- Contenido principal de la página -->
     <main>
+        <div class="spinner" id="spinner"></div>
         <section id="sec-messages">
             <div class="yellow message">
                 <i class="fa-solid fa-exclamation"></i>
